terraform/security_group.tf
resource "aws_security_group" "poke_sg" {
  name   = "SSH + Port 3005 for API"
  vpc_id = aws_vpc.poke_vpc.id
 
  ingress {
    cidr_blocks = [
      "0.0.0.0/0"
    ]
    from_port   = 0
    to_port     = 65535
    protocol  = "tcp"
  }
  
  egress {
    from_port   = 0
    to_port     = 0
    protocol = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
